[package]
name = "cursor-speed-pin"
version = "0.1.0"
authors = ["MCOfficer <mcofficer@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
anyhow = "1.0"
winit = "0.22"
trayicon = { version = "0.1.0-beta.18", features = ["winit"] }